# dictatorgen

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  regime_memory.db  requirements.txt  setup.cfg  setup.py  watcher.py
dictatorgenai/: __init__.py
dictatorgenai/agents/: __init__.py  assigned_general.py  base_agent.py  colonel_fragmenter.py  dictator.py  general.py  information_officer.py  legion_commander.py  majordomo.py  prompt.txt  tool.py
dictatorgenai/command_chains/: __init__.py  command_chain.py  default_command_chain.py
dictatorgenai/config/: __init__.py  settings.py
dictatorgenai/conversations/: BaseConversation.py  GroupChat.py  NestedChat.py  SequentialChat.py  TwoAgentChat.py  __init__.py  base_conversation.py  group_chat.py  nested_chat.py  sequential_chat.py  two_agent_chat.py
dictatorgenai/core/: __init__.py  base_agent.py  base_event_manager.py  command_chain.py  command_chain_v2.py  coup_condition.py  default_command_chain.py  dictator.py  event_manager.py  general.py  regime.py  regime.save.save  subtask_command_chain.py
dictatorgenai/events/: __init__.py  base_event_manager.py  event.py  event_manager.py
dictatorgenai/examples/: __init__.py  dictator_chainlit_example.py  example_sse.py  medecine_regime.py  server.py  try_cuistot.py  try_image_generation.py
dictatorgenai/memories/: __init__.py  base_chat_memory.py  base_memory.py  chat_discussion.py  mongo_chat_memory.py  redis_chat_memory.py  regime_memory.py  sql_ite_chat_memory.py
dictatorgenai/memories/stores/: __init__.py  memory_store.py  redis_store.py  sqlite_store.py
dictatorgenai/models/: __init__.py  base_model.py  distilbert_model.py  gpt3_model.py  nlp_model.py  openai_model.py  qabert_model.py  sbert_model.py
dictatorgenai/prompts/: prompts.py
dictatorgenai/regimes/: __init__.py  base_regime.py  regime.py
dictatorgenai/steps/: __init__.py  action_steps.py  base_step.py  message_steps.py
dictatorgenai/utils/: __init__.py  task.py  tool.py
