[tool.poetry]
name = "dictatorgenai"
version = "0.1.0"
description = "An agentic Python library for multi-agents collaboration"
authors = ["Jérémie Lenoir"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/smartlawyer-ai/dictatorgen"
repository = "https://github.com/smartlawyer-ai/dictatorgen"
keywords = ["framework", "ai", "python", "agentic", "agent"]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = ">=23.2.1"
aioitertools = "0.12.0"
aiosqlite = "0.20.0"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
asyncer = "0.0.7"
authlib = "1.4.0"
bidict = "0.23.1"
cachetools = "5.5.0"
certifi = "2024.12.14"
cffi = "1.17.1"
chainlit = "1.3.2"
charset-normalizer = "3.4.1"
chevron = "0.14.0"
click = "8.1.8"
cryptography = "44.0.0"
dataclasses-json = "0.6.7"
deprecated = "1.2.15"
distro = "1.9.0"
fastapi = "0.115.6"
filetype = "1.2.0"
googleapis-common-protos = "1.66.0"
graphql-core = "3.2.5"
greenlet = "3.1.1"
grpc-interceptor = "0.15.4"
grpcio = "1.68.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.5.0"
jinja2 = "3.1.5"
jiter = "0.8.2"
joblib = "1.4.2"
lazify = "0.4.0"
literalai = "0.0.623"
mako = "1.3.8"
markupsafe = "3.0.2"
marshmallow = "3.23.2"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
numpy = "1.26.4"
openai = "1.58.1"
packaging = "23.2"
pandas = "2.2.3"
protobuf = "5.29.2"
psutil = "6.1.1"
pyarrow = "18.1.0"
pycparser = "2.22"
pydantic = "2.10.1"
pydantic-core = "2.27.1"
pyjwt = "2.10.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-engineio = "4.11.2"
python-multipart = "0.0.9"
python-socketio = "5.12.1"
pytz = "2024.2"
requests = "2.32.3"
scikit-learn = "1.6.0"
scipy = "1.14.1"
simple-websocket = "1.1.0"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
sqlean-py = "3.47.0"
starlette = "0.41.3"
strawberry-graphql = "0.253.1"
syncer = "2.0.3"
threadpoolctl = "3.5.0"
tomli = "2.2.1"
tqdm = "4.67.1"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
uptrace = "1.28.2"
urllib3 = "2.3.0"
uvicorn = "0.25.0"
watchfiles = "0.20.0"
websockets = "14.1"
wrapt = "1.17.0"
wsproto = "1.2.0"
zipp = "3.21.0"

[tool.poetry.extras]
dev = ["flake8"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
watchdog = "^6.0.0"

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "venv", ".venv"]
extend-ignore = ["E203", "E266", "E501", "W503"]

[tool.pytest.ini_options]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev-watch = "watcher:main"
