[metadata]
description-file = README.md
license_files = LICENSE

[options]
packages = find:
install_requires =
    # Vos dépendances ici, par exemple :
    # numpy
    # pandas

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
dev =
    flake8>=7.1.1
    
[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,.venv
extend-ignore = E203, E266, E501, W503

[aliases]
test = pytest

[tool:pytest]
addopts = -ra -q

[coverage:run]
branch = True
source =
    dictatorgenai
